--- a/.gitignore
+++ b/.gitignore
@@ -172,7 +172,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+src/data/db.sqlite3
 
 # Flask stuff:
 instance/
@@ -222,4 +222,5 @@ venv.bak/
 
 # media dir
 src/media/*
+src/data/*
 !.gitkeep
