--- a/conf/sample_api.conf
+++ b/conf/sample_api.conf
@@ -5,7 +5,7 @@ upstream app {
 
 server {
         listen          80;
-        server_name     .aquatan.studio;
+        server_name     sample.drf.aquatan.studio;
         server_tokens   off;
 
         if ($http_x_forwarded_proto != https) {
@@ -32,4 +32,3 @@ server {
                 client_max_body_size    50M;
         }
 }
-~
